<resources>
    <string name="app_name">AsKU</string>

    <!--etc-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_allowed">Not allowed.</string>
    <string name="send_message">Send message</string>
    <string name="already_recommended">Already recommended</string>
    <string name="success_recommend">success to recommend this</string>
    <string name="already_reported">already reported</string>
    <string name="success_report">success to report</string>
    <string name="answered_get_point">You wrote answer.\nYou got 30Point.</string>
    <string name="dialog_modification">modification</string>
    <string name="dialog_del">Del</string>
    <string name="manage_boards">Manage boards</string>
    <string name="deleted_the_post">Deleted the post</string>
    <string name="failed_to_delete_the_post">Failed to delete the post.</string>
    <string name="do_not_have_permission">You do not have permission</string>

    <!-- LoginActivity -->
    <string name="login_id_edittext_hint">Email</string>
    <string name="password_edittext_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_button_description">After you sign up, share class information with classmates!</string>
    <string name="success_login">Success to login</string>
    <string name="fail_login_email_format">It does not fit the email format.</string>
    <string name="fail_login_invalid">No ID or password is wrong.</string>
    <string name="fail_login_id_does_not_exist">The ID does not exist</string>

    <!-- SignupActivity -->
    <string name="signup_id_edittext_hint">myemail@google.com</string>
    <string name="signup_password_edittext_hint">More than %dchars</string>
    <string name="signup_confirm_password_edittext_hint">Input password one more</string>
    <string name="signup_id_textview">Email</string>
    <string name="signup_password_textview">Password</string>
    <string name="signup_confirm_password_textview">Reconfirm</string>
    <string name="signup_request_button">Sign up</string>
    <string name="signup_toast_input_id">Input Email</string>
    <string name="signup_toast_already_used_id">Already used Email</string>
    <string name="signup_toast_usable_used_id">You can use this Email</string>
    <string name="signup_toast_password_chars">Input password more than %d characters</string>
    <string name="signup_toast_password_reconfirm">Miss matched password and the reconfirm</string>
    <string name="save_button">Save</string>
    <string name="msg_list_recv">Received Messages</string>
    <string name="msg_list_sent">Sent Messages</string>
    <string name="msg_list_recv_no">No received messages.</string>
    <string name="msg_list_sent_no">No sent messages.</string>
    <string name="name_edittext_hint">User name</string>
    <string name="new_msg_button">New</string>
    <string name="delete_msg_button">Del</string>
    <string name="send_msg_button">Send</string>

    <!-- Schedule -->
    <string name="schedule_getting_failed_toast">Click when you can see the schedule.</string>
    <string name="schedule_take_button">Take schedule</string>
    <string name="schedule_title">2018 Fall Subjects</string>
    <string name="schedule_description">Click the subject to go to community</string>
    <string name="schedule_watching">Click this if you are looking the Schedule Page</string>

    <!-- Course Fragement -->
    <string name="course_tab_all">All</string>
    <string name="course_tab_notice">Notice</string>
    <string name="course_tab_materials">Materials</string>
    <string name="course_tab_qna">Q&amp;A</string>
    <string name="course_tab_etc">Etc.</string>
    <string name="course_no_posts1">There are no posts yet.</string>
    <string name="course_no_posts2">Please write a post.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ReadPost Fragment -->
    <string name="post_comment_title">Comments</string>
    <string name="post_comment_empty1">There are no comments.</string>
    <string name="post_comment_empty2">Please write a comment.</string>
    <string name="post_comment_hint">Please write a comment.</string>
    <string name="post_comment_leave">\u0020\u0020Leave a Comment</string>
    <string name="comment_success">Commented Successfully.</string>
    <string name="point_notice2">ASKU Point System</string>

    <!-- Write Post Fragment -->
    <string name="input_subject">Input title.</string>
    <string name="input_content">Input content.</string>
    <string name="attachment">Attachment</string>

    <!-- CommentListAdapter -->
    <string name="pick_comment_title">Pick Comment</string>
    <string name="pick_comment_content">Would you pick this comment?</string>
    <string name="comment_picked">Comment picked.</string>
    <string name="cannot_pick">Cannot pick own comment</string>

    <!-- Point -->
    <string name="point_notice_ok">Ok</string>
    <string name="point_notice_body">Point policy</string>
    <string name="point_current">current ASKU point</string>
    <string name="point_notice">
        Initial Point : 200\n\n
        [Notice/Material Board]\n
        + 70 write Document\n
        + 5 per Document Likes\n\n
        [QA Board]\n
        - 100 write Document\n
        + 30 write Reply\n
        + 70 Reply adopted
    </string>

    <!-- MyPage -->
    <string name="logout">Logout</string>
    <string name="currPoint">Current Point</string>
    <string name="myQuestion">My Question</string>
    <string name="myComment">My Comment</string>

</resources>
