<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Signup Button-->
    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/signup"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/sign_up_button" />


    <!-- ID&Password Edittext and Login Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/signup_id_textview" />

            <EditText
                android:id="@+id/edittext_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/signup_id_textview"
                android:inputType="textEmailAddress"
                android:hint="@string/signup_id_edittext_hint" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/signup_password_textview" />

            <EditText
                android:id="@+id/signup_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/signup_password_textview"
                android:hint="@string/signup_password_edittext_hint"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_reconfirm_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/signup_confirm_password_textview" />

            <EditText
                android:id="@+id/edittext_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/signup_reconfirm_password_textview"
                android:hint="@string/signup_confirm_password_edittext_hint"
                android:inputType="textPassword" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>