<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.ac.korea.lecturestalk.kulecturestalk.message.MsgSentActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/id_search_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.SearchView
                android:id="@+id/id_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:clickable="true" />

            <Button
                android:id="@+id/id_new_msg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_send_24dp"
                android:text="@string/new_msg_button" />

            <Button
                android:id="@+id/id_delete_msg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_trash_24dp"
                android:text="@string/delete_msg_button" />

        </LinearLayout>

        <ListView
            android:id="@+id/id_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_below="@+id/id_search_block" />

        <TextView
            android:id="@+id/id_no_msg_sent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/msg_list_sent_no" />

    </RelativeLayout>

</FrameLayout>
